<resources>
    <string name="app_name">Malayalam News Live</string>
    <string name="short_name">വാർത്തകൾ</string>
    <string name="App_ID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="InterstitialAd">ca-app-pub-3940256099942544/1033173712</string>
    <string name="Banner_Ads_1">ca-app-pub-3940256099942544/6300978111</string>
    <string name="Banner_Ads_2">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bengali_share">കൂട്ടുകാരുമായി പങ്കുവെക്കുക</string>
    <string name="english_share">Invite friends</string>
    <string name="bengali_rate">ഒരു റേറ്റിംഗ് നൽകുക</string>
    <string name="english_rate">5 Star rating</string>
    <string name="live_news">Live News</string>
    <string name="bengali_live">തത്സമയ വാർത്തകൾ</string>
    <string name="news_paper_bn">പത്രം</string>
    <string name="app_policy_bn">ആപ്പ് വിവരങ്ങൾ</string>
    <string name="owner_of_news_bn">വാർത്താ ചാനലിന്റെ ഉടമ</string>
    <string name="news_bn">മലയാളം ന്യൂസ്</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_url">https://sites.google.com/view/malayalam-news-live-app/home</string>
    <string name="facebook">FaceBook</string>
    <string name="youtube">YouTube</string>
    <string name="livetv_link">LiveTV Link</string>
    <string name="website">Website</string>
    <string name="channel_description">Channel Description</string>
    <string name="email">Email</string>
    <string name="live_now">Live Now</string>
    <string name="ePaper_url">https://script.google.com/macros/s/AKfycbxMH5D3Qhwqytok1GAywSFEKQTX81T73eTXpA7e7GMvoB9CAoBSawKnyee0dfjSCni2/exec</string>
    <string name="election_result">Election result</string>
    <string name="election_ml">തിരഞ്ഞെടുപ്പ് ഫലം</string>
    <string name="hi_shorts">ഷോർട്ട്സ് വാർത്തകൾ</string>
    <string name="not_Open_ePaper">ചില പ്രശ്‌നങ്ങൾ കാരണം പത്രം തുറക്കുന്നില്ല. നിങ്ങളുടെ ബ്രൗസറിൽ പത്രം തുറക്കുക</string>
    <string name="shorts">Shorts</string>
    <string name="news_url">https://script.google.com/macros/s/AKfycbxNaCPNm0WClZ8c7FjPx--hzRAYD92MGA6N505WPo3X-x6kEhyrWeZLn36yOjeyJMS1/exec</string>
    <string name="rss_feed">https://malayalam.news18.com/rss/india.xml</string>
    <string name="election_ml_link">https://www.mathrubhumi.com/result/thrikkakara_byelection/</string>
    <string name="description">Description</string>
</resources>