<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.gms.ads.AdView
                    android:id="@+id/adView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    app:adSize="BANNER"
                    app:adUnitId="@string/Banner_Ads_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                </com.google.android.gms.ads.AdView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardVide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="20dp"
                    app:cardCornerRadius="10dp"
                    app:layout_constraintEnd_toEndOf="@+id/adView"
                    app:layout_constraintStart_toStartOf="@+id/adView"
                    app:layout_constraintTop_toBottomOf="@+id/adView">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:textColor="#FF5722"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                </androidx.cardview.widget.CardView>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardVide">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <GridLayout
                            android:id="@+id/gridLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_marginTop="10dp"
                            android:columnCount="2"
                            android:rowCount="2"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <androidx.cardview.widget.CardView
                                android:id="@+id/CardView1"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:layout_margin="10dp"
                                app:cardCornerRadius="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="60dp"
                                        android:layout_marginTop="5dp"
                                        app:srcCompat="@drawable/tv" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="@string/live_news"
                                        android:textColor="@color/txt_color"
                                        android:textSize="18sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:gravity="center"
                                        android:text="@string/bengali_live" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>


                            <androidx.cardview.widget.CardView
                                android:id="@+id/CardView2"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:layout_margin="10dp"
                                app:cardCornerRadius="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="60dp"
                                        android:layout_marginTop="5dp"
                                        app:srcCompat="@drawable/paper" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="News Paper"
                                        android:textColor="@color/txt_color"
                                        android:textSize="18sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:gravity="center"
                                        android:text="@string/news_paper_bn" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>


                            <androidx.cardview.widget.CardView
                                android:id="@+id/CardView32"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:layout_margin="10dp"
                                app:cardCornerRadius="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="60dp"
                                        android:layout_marginTop="5dp"
                                        app:srcCompat="@drawable/shorts" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="@string/shorts"
                                        android:textColor="@color/txt_color"
                                        android:textSize="18sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:gravity="center"
                                        android:text="@string/hi_shorts" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/CardView33"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:layout_margin="10dp"
                                app:cardCornerRadius="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="60dp"
                                        android:layout_marginTop="5dp"
                                        app:srcCompat="@drawable/election" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="@string/election_result"
                                        android:textColor="@color/txt_color"
                                        android:textSize="18sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:gravity="center"
                                        android:text="@string/election_ml" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/CardView4"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:layout_margin="10dp"
                                app:cardCornerRadius="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="60dp"
                                        android:layout_marginTop="5dp"
                                        app:srcCompat="@drawable/publisher" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="News Publisher"
                                        android:textColor="@color/txt_color"
                                        android:textSize="18sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:gravity="center"
                                        android:text="@string/owner_of_news_bn" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:id="@+id/CardView3"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:layout_margin="10dp"
                                app:cardCornerRadius="10dp">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical"
                                    android:padding="10dp">

                                    <ImageView
                                        android:layout_width="match_parent"
                                        android:layout_height="60dp"
                                        android:layout_marginTop="5dp"
                                        app:srcCompat="@drawable/policy" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="@string/privacy_policy"
                                        android:textColor="@color/txt_color"
                                        android:textSize="18sp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginTop="5dp"
                                        android:gravity="center"
                                        android:text="@string/app_policy_bn" />

                                </LinearLayout>

                            </androidx.cardview.widget.CardView>

                        </GridLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/network_error"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/activity_network_error"/>
    </androidx.drawerlayout.widget.DrawerLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/Banner_Ads_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>